--- a/stringgenerator/build.gradle
+++ b/stringgenerator/build.gradle
@@ -4,6 +4,9 @@ apply plugin: 'maven'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation gradleApi()
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    testImplementation "junit:junit:4.13"
 }
 
 sourceCompatibility = "1.8"
