Generation part completed in StringGeneratorTask, and some addition to extension and plugin classes

--- a/stringgenerator/build.gradle
+++ b/stringgenerator/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation gradleApi()
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup:javapoet:1.12.1'
 
     testImplementation "junit:junit:4.13"
 }
