--- a/stringgenerator/build.gradle
+++ b/stringgenerator/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java-gradle-plugin'
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -7,7 +8,30 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup:javapoet:1.12.1'
 
+    compileOnly("com.android.tools.build:gradle:4.0.2")
     testImplementation "junit:junit:4.13"
+}
+
+gradlePlugin {
+    plugins {
+        stringGenerator {
+            id = 'com.volsahin.stringgenerator'
+            implementationClass = 'com.volsahin.stringgenerator.StringGeneratorPlugin'
+        }
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+
+            group = 'com.volsahin'
+            groupId = 'com.volsahin'
+            artifactId = 'stringgenerator'
+            version = '1.0.0'
+        }
+    }
 }
 
 sourceCompatibility = "1.8"
